Namespacing added to PSR-0 in composer.json

--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,10 @@
             "homepage": "http://danogillette.com",
             "role": "Developer"
         }
-    ]
+    ],
+    "autoload": {
+        "psr-0": {
+            "Qeto": "src/"
+        }
+    }
 }
