Changing file path

--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "dgillette/qeto",
+    "name": "fashionphile/qeto",
     "type": "library",
     "description": "Query builder for models and entities.",
     "keywords": ["laravel","queries","scopes","php","eloquent"],
-    "homepage": "http://danogillette.com",
+    "homepage": "http://fashionphile.com",
     "require": {
         "php": "^7.1"
     },
@@ -15,7 +15,7 @@
             "name": "Dano Gillette",
             "email": "dgillette25@gmail.com",
             "homepage": "http://danogillette.com",
-            "role": "Developer"
+            "role": "Senior Developer"
         }
     ],
     "autoload": {
